BUG-1365 : Make clickable things better visible

--- a/valinta-tulos-service/src/main/webapp/puuttuvat_tulokset/puuttuvat_tulokset.css
+++ b/valinta-tulos-service/src/main/webapp/puuttuvat_tulokset/puuttuvat_tulokset.css
@@ -6,6 +6,10 @@
     position: relative; top: 200px;
 }
 
+#haku-list li.clickable span {
+    color: -webkit-link;
+}
+
 .ajax-indicator {
     position: absolute; margin: 0; visibility: hidden;
 }
@@ -24,3 +28,7 @@
 .clickable {
     cursor: pointer;
 }
+.clickable span:hover,a:hover {
+    background-color: lightyellow;
+}
+
